feat: 新增多项功能与优化，修复卸载泄漏与指标统计问题
1. 新增压缩类空间监控指标与前端展示
2. 新增Web路由自动加/{lingId}前缀配置
3. 新增治理拒绝指标统计，避免限流误判健康状态
4. 修复灵元卸载容器stop幂等性问题，彻底解决类加载器泄漏
5. 新增灵元卸载ClassLeak检测与状态通知
6. 新增自动配置排除/包含开关与默认调度配置排除
7. 优化双栈构建脚本与Checkstyle路径适配
8. 新增指标存储迁移与滑动窗口健康判定